Fix instruction message

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,7 +13,7 @@ html
 		.about__bg
 
 		.instruction
-			| Press any key
+			span.instruction-message Click or Press Keys
 
 		button.about__button
 			span.wrapper
@@ -24,7 +24,7 @@ html
 
 		.about__content
 
-			p Click or Press Any Keys
+			p.instruction-message Click or Press Keys
 
 			p.credit
 				| Made by&nbsp;
