Add some effects

--- a/src/index.pug
+++ b/src/index.pug
@@ -29,5 +29,8 @@ html
 			p.credit
 				| Made by&nbsp;
 				a(href='http://baku89.com' target='_blank') Baku Hashimoto
+				br
+				| Music by &nbsp;
+				a(href='http://www.singing-bell.com/jingle-bells-mp3/' target='_blank') Singing Bell
 
 		script(src='./js/index.js')
