--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -99,8 +99,6 @@ button
 	height 100%
 	opacity 0
 	
-	transition opacity .1s cubic-bezier(.33,0,.46,1)
-	
 	&.show
 		opacity 1
 
@@ -169,6 +167,12 @@ button
 	// background red
 	transition border-color .2s ease
 	overflow hidden
+	transition opacity .5s $easing
+	opacity 0
+	
+	&.show
+		opacity 1
+		
 
 	&:hover
 		border-color $c-invert
@@ -217,7 +221,7 @@ button
 	transition all .5s $easing 0s, visibility 0s linear 0.5s
 	visibility hidden
 	opacity 0
-	background-color $c-invert
+	background-color #25e0f3//$c-invert
 	mix-blend-mode exclusion
 
 	.show-about &
@@ -237,11 +241,14 @@ button
 	visibility: hidden
 	color white
 	opacity 0
-	line-height 2
+	line-height 1.5
 	display flex
 	flex-direction column
 	justify-content center
 	font-size 2.4rem
+	
+	p
+		margin-top 1em
 
 	.show-about &
 		transform none
