Add all animations

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -122,9 +122,9 @@ button
 	position absolute
 	top 50%
 	left 50%
-	width 120px
+	width 200px
 	height 12px
-	margin-left -60px
+	margin-left -100px
 	transition opacity .5s cubic-bezier(.33,0,.46,1)
 	
 	&.hide
@@ -137,8 +137,8 @@ button
 	width 0%
 	height 100%
 	transform-origin top left
-	background-color $c-blue
 	transition width .8s cubic-bezier(.33,0,.46,1)
+	overflow hidden
 	
 //--------------------------------------------------
 // about
