--- a/src/index.pug
+++ b/src/index.pug
@@ -33,5 +33,7 @@ html
 				br
 				| Music by &nbsp;
 				a(href='http://www.singing-bell.com/jingle-bells-mp3/' target='_blank') Singing Bell
+				br
+				a.about__github(href='https://github.com/baku89/recursive-christmas-tree' target='_blank') Github
 
 		script(src='./js/index.js')
