--- a/src/pug/meta.pug
+++ b/src/pug/meta.pug
@@ -7,7 +7,7 @@ meta(http-equiv='Pragma' content='no-cache')
 meta(http-equiv='Expires' content='0')
 
 //- viewport
-meta(name='viewport' content='width=device-width,initial-scale=1.0')
+meta(name='viewport' content='width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no')
 meta(http-equiv='Content-Style-Type' content='text/css')
 meta(http-equiv='Content-Script-Type' content='text/javascript')
 
